--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hello-friend"]
-	path = themes/hello-friend
-	url = git@github.com:aditya-konarde/hugo-theme-hello-friend.git
+    path = themes/hello-friend
+    url = https://github.com/aditya-konarde/hugo-theme-hello-friend.git
