--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
 [submodule "themes/hello-friend"]
     path = themes/hello-friend
     url = https://github.com/aditya-konarde/hugo-theme-hello-friend.git
-    branch = main
+[submodule "themes/PaperMod"]
+	path = themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
