--- a/config.yaml
+++ b/config.yaml
@@ -31,7 +31,7 @@ params:
     - name: "github"
       url: "https://github.com/aditya-konarde"
     - name: "twitter"
-      url: "https://twitter.com/aditya-konarde"
+      url: "https://twitter.com/aditya_konarde"
     - name: "instagram"
       url: "https://instagram.com/aditya.konarde"
 
